cleaned up stuff